--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Footer from '@components/Footer.astro';
+import Header from '@components/Header.astro';
 import { siteInfo } from '@utils/site-info';
 
 const { title = siteInfo.title, desc = siteInfo.description } = Astro.props;
@@ -15,17 +17,10 @@ const { title = siteInfo.title, desc = siteInfo.description } = Astro.props;
     <meta property="og:title" content={title} />
     <title>{title}</title>
   </head>
-  <body>
+  <body class="w-full h-full bg-pearl-gray">
+    <Header />
     <slot />
+    <Footer />
   </body>
 </html>
 
-<style>
-  html,
-  body {
-    margin: 10px;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(243, 243, 243);
-  }
-</style>
